# checkerboard

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini  uwsgi.ini
.github/workflows/: ci.yaml
checkerboard/: server.py
checkerboard/usermapper/: __init__.py  usermapper.py
kubernetes/: api-lsst-codes-ingress.yaml  ssl-proxy-secrets.template.yaml  uservice-ghslacker-deployment.yaml  uservice-ghslacker-secrets.template.yaml  uservice-ghslacker-service.yaml
manifests/: secret.template.yaml
manifests/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
requirements/: dev.in  dev.txt  main.in  main.txt
scripts/: install-base-packages.sh  start.sh
src/checkerboard/: __init__.py  app.py  cli.py  config.py  exceptions.py  factory.py  main.py  server.py  slack.py  util.py
src/checkerboard/dependencies/: auth.py  config.py  context.py
src/checkerboard/handlers/: __init__.py  external_index.py  internal_index.py  mappings.py
src/checkerboard/handlers/internal/: __init__.py  index.py
src/checkerboard/models/: index.py
src/checkerboard/service/: mapper.py
src/checkerboard/storage/: redis.py  slack.py
src/checkerboard/usermapper/: __init__.py  usermapper.py
tests/: app_test.py  checkerboard_test.py  slack_test.py  util.py
tests/handlers/internal/: index_test.py
uservice_ghslacker/: __init__.py  server.py
uservice_ghslacker/usermapper/: usermapper.py
