[metadata]
name = checkerboard
description = User identity mapper (currently only Slack <-> GitHub).
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/lsst-sqre/checkerboard
project_urls =
    Change log = https://github.com/lsst-sqre/checkerboard/master/blob/CHANGELOG.rst
    Source code = https://github.com/lsst-sqre/checkerboard
    Issue tracker = https://github.com/lsst-sqre/checkerboard/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
#package_dir =
#    = src
#packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm

#[options.packages.find]
#where = src

[options.entry_points]
console_scripts =
    checkerboard = checkerboard:standalone

[flake8]
max-line-length = 79

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
